--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to new_event_path, class: "btn btn-default" do %><i class="fa fa-plus"></i> Create event<% end %>
+
 
 <div class="row">
 
