--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
           <!-- sidebar menu -->
           <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
 
-            <% if @event %>
+            <% if @event.try(:persisted?) %>
             <div class="menu_section">
               <h3>Event</h3>
               <ul class="nav side-menu">
