--- a/app/views/attendees/index.html.erb
+++ b/app/views/attendees/index.html.erb
@@ -1,3 +1,10 @@
+<% if flash[:error].present? %>
+	<div class="alert alert-info alert-dismissible fade in" role="alert">
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+		<%= flash[:error] %>	
+	</div>
+<% end %>
+
 <button class="btn btn-default" data-toggle="modal" data-target=".invite-attendee-modal"><i class="fa fa-user-plus"></i> Invite attendee</button>
 <button class="btn btn-default" data-toggle="modal" data-target=".invite-attendees-modal"><i class="fa fa-file-text-o"></i> Invite attendees</button>
 
